--- a/layouts/partials/analytics.html
+++ b/layouts/partials/analytics.html
@@ -1,9 +1,24 @@
 {{- with .Site.Params.ga_analytics }}
-<script async src="https://www.googletagmanager.com/gtag/js?id={{ . }}"></script>
+<!-- google Analytics -->
+<script
+    async
+    src="https://www.googletagmanager.com/gtag/js?id={{ . }}"
+></script>
 <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', '{{ . }}');
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+        dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+    gtag("config", "{{ . }}");
 </script>
-{{- end -}}
+{{- end -}} 
+{{with .Site.Params.cf_analytics }}
+<!-- Cloudflare Web Analytics -->
+<script
+    defer
+    src="https://static.cloudflareinsights.com/beacon.min.js"
+    data-cf-beacon='{"token": "{{ . }}"}'
+></script>
+<!-- End Cloudflare Web Analytics -->
+{{end}}
