--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -17,7 +17,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 {{- if (ne hugo.Environment "development") }}
-  {{- partial "analytics" . }}
+{{ partial "analytics" . }}
 {{- end }}
 {{- partial "opengraph" . }}
 {{- partial "favicon" . }}
