--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -5,7 +5,7 @@
 <footer class="footer">
   <div class="footer_inner wrap pale">
     <img src='{{ absURL (default "icons/apple-icon.png" $s.footerLogo) }}' class="icon icon_2 transparent">
-    <p>{{ "copyright " }}{{ with $s.since }} {{ . }}-{{ end }}<span class="year"></span> {{ upper .Site.Title }}. {{ T "all_rights" }}</p>
+    <p>{{ "copyright " }}{{ with $s.since }} {{ . }}-{{ end }}<span class="year"></span> {{ upper .Site.Title }}. {{ T "all_rights" }} | {{- partial "privacy-policy" .}}</p>
     {{- partial "top" .}}
   </div>
 </footer>
